# usenet-dl

./: .env.example  .gitignore  API_TESTING.md  CHANGELOG.md  CLAUDE.md  CLEANUP_PLAN.md  CLEANUP_PLAN_PROGRESS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.speedtest  Fallout.S02E06.The.Other.Player.2160p.AMZN.WEB-DL.DDP5.1.Atmos.DV.HDR10H.265-Kitsune.nzb  LICENSE-APACHE  LICENSE-MIT  MANUAL_SERVER_TESTING.md  README.md  clippy.toml  fix-plan.md  fix-plan_PROGRESS.md  implementation_1.md  implementation_1_PROGRESS.md  implementation_1_PROGRESS.md.backup  maintainability-warnings-plan.md  maintainability-warnings-plan_PROGRESS.md  optimisation_plan.md  optimisation_plan_PROGRESS.md  plan.md  plan_PROGRESS.md  rust-best-practices-scan.md  rust-best-practices-scan_PROGRESS.md  shell.nix  speed_improvement.md  speed_improvement_PROGRESS.md  trait-plugin-plan.md  trait-plugin-plan_PROGRESS.md  usenet-dl.db  usenet-dl.db-shm  usenet-dl.db-wal
.claude/skills/fault-injection-nntp-server/: Cargo.toml  SKILL.md  fault_test.rs  faults.md
.claude/skills/fault-injection-nntp-server/configs/: connection-faults.toml  encoding-faults.toml  protocol-faults.toml  stress-test.toml
.claude/skills/fault-injection-nntp-server/src/: config.rs  faults.rs  main.rs  protocol.rs  server.rs
.claude/skills/rust-borrow-fixer/: SKILL.md
.claude/skills/rust-coder/: SKILL.md
.claude/skills/rust-project-init/: SKILL.md
.claude/skills/rust-reviewer/: SKILL.md
.codemachine/artifacts/architecture/: 01_Blueprint_Foundation.md  02_System_Structure_and_Data.md  03_Behavior_and_Communication.md  04_Operational_Architecture.md  05_Rationale_and_Future.md  06_UI_UX_Architecture.md  architecture_manifest.json
.codemachine/artifacts/requirements/: 00_Specification_Review.md
.codemachine/inputs/: specifications.md
.codemachine/scripts/: generate-manifest.js
.github/workflows/: ci.yml
docker/: docker-compose.test.yml
docker/inn/: Dockerfile  inn.conf  newsgroups  readers.conf
docs/: api-reference.md  architecture.md  configuration.md  contributing.md  getting-started.md  par2-integration.md  post-processing.md  postman_collection.json  test_api.sh
examples/: README.md  basic_download.rs  custom_configuration.rs  multi_subscriber.rs  rest_api_server.rs  speedtest.rs
src/: config.rs  db.rs  deobfuscation.rs  downloader_tests.rs  error.rs  extraction.rs  folder_watcher.rs  lib.rs  post_processing.rs  retry.rs  rss_manager.rs  rss_scheduler.rs  scheduler.rs  scheduler_task.rs  speed_limiter.rs  types.rs  utils.rs
src/api/: auth.rs  error_response.rs  mod.rs  openapi.rs  rate_limit.rs  routes.rs  state.rs  tests.rs
src/api/routes/: categories.rs  config.rs  downloads.rs  history.rs  mod.rs  queue.rs  rss.rs  scheduler.rs  servers.rs  system.rs
src/api/tests/: categories.rs  config.rs  downloads.rs  history.rs  mod.rs  queue.rs  servers.rs  system.rs
src/db/: articles.rs  downloads.rs  duplicates.rs  history.rs  migrations.rs  mod.rs  passwords.rs  rss.rs  state.rs  tests.rs
src/db/tests/: articles.rs  close.rs  downloads.rs  duplicates.rs  history.rs  migrations.rs  mod.rs  passwords.rs  rss.rs  state.rs
src/downloader/: background_tasks.rs  config_ops.rs  control.rs  download_task.rs  lifecycle.rs  mod.rs  nzb.rs  post_process.rs  queue.rs  queue_processor.rs  rss.rs  server.rs  services.rs  tasks.rs  test_helpers.rs  webhooks.rs
src/downloader/direct_unpack/: coordinator.rs  mod.rs  rar_detection.rs  rename.rs
src/downloader/download_task/: batch_processor.rs  batching.rs  context.rs  finalization.rs  mod.rs  orchestration.rs  tests.rs
src/downloader/tests/: control.rs  control_unit.rs  lifecycle.rs  mod.rs  post_process.rs  queue_processor.rs  queue_unit.rs  rss.rs  rss_unit.rs  scheduler.rs  scripts.rs  server.rs  speed.rs  webhooks.rs
src/downloader_tests/: control.rs  disk_space.rs  duplicates.rs  lifecycle.rs  mod.rs  nzb.rs  queue.rs  rss.rs  scheduler.rs  scripts.rs  server.rs  speed.rs  webhooks.rs
src/extraction/: mod.rs  password_list.rs  rar.rs  sevenz.rs  shared.rs  zip.rs
src/extraction/tests/: mod.rs
src/parity/: cli.rs  mod.rs  noop.rs  par2_metadata.rs  parser.rs  traits.rs
src/post_processing/: cleanup.rs  mod.rs  repair.rs  verify.rs
src/post_processing/tests/: mod.rs
src/rss_manager/: mod.rs
src/rss_manager/tests/: mod.rs
src/scheduler/: mod.rs
src/scheduler/tests/: mod.rs
test_scripts/: test_failure.sh  test_success.sh
tests/: e2e_debug.rs  e2e_docker.rs  e2e_live.rs  e2e_real_nzb.rs  live_download_task.rs  parallel_downloads.rs  parallel_yenc_decoder.rs
tests/common/: assertions.rs  config.rs  fixtures.rs  mod.rs
tests/manual/: README.md  api-testing.md  rss-testing.md
