[package]
name = "usenet-dl"
version = "0.1.0"
edition = "2021"
authors = ["usenet-dl contributors"]
license = "MIT OR Apache-2.0"
description = "Backend library for SABnzbd/NZBGet-like applications - highly configurable Usenet download manager"
repository = "https://github.com/yourusername/usenet-dl"
keywords = ["usenet", "nntp", "nzb", "download", "sabnzbd"]
categories = ["network-programming", "web-programming"]
rust-version = "1.70"

[dependencies]
# Core NNTP functionality
nntp-rs = { path = "../nntp-rs" }

# Async runtime
tokio = { version = "1", features = ["full", "signal"] }
tokio-util = "0.7"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# Archive extraction
unrar = "0.5"
sevenz-rust = "0.5"
zip = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging and errors
tracing = "0.1"
thiserror = "1"

# HTTP client (webhooks, URL fetching, RSS)
reqwest = { version = "0.11", features = ["json"] }

# File watching
notify = "6"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Hashing (duplicate detection)
sha2 = "0.10"

# Regular expressions (RSS filters)
regex = "1"

# REST API
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower_governor = "0.3"

# OpenAPI documentation
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

# Server-Sent Events
tokio-stream = "0.1"

# RSS feed support (temporarily disabled until Phase 4 - conflicts with nntp-rs quick-xml)
# TODO: Enable in Phase 4 and fix nntp-rs compatibility with quick-xml encoding feature
# rss = "2"
# atom_syndication = "0.4"

[dev-dependencies]
# Testing utilities
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
