[package]
name = "fault-nntp-server"
version = "0.1.0"
edition = "2021"
description = "Fault injection NNTP server for testing Usenet download clients"

[[bin]]
name = "fault-nntp-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
flate2 = "1"
thiserror = "1"
